--- a/docker/codenamemap.yaml
+++ b/docker/codenamemap.yaml
@@ -26,3 +26,9 @@ precise:
       pkgs:
         - linux-image-generic-lts-raring
         - linux-headers-generic-lts-raring
+
+xenial:
+    pkgrepo:
+      name: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
+      humanname: Xenial
+      dist: xenial
