--- a/docker/files/systemd.conf
+++ b/docker/files/systemd.conf
@@ -6,7 +6,12 @@ After=docker.service
 {#- Ugly, but covers the cases where variable evaluates to false, is empty, or non-existent #}
 {%- set runoptions = container.get("runoptions") or [] %}
 {%- set stopoptions = container.get("stopoptions") or [] %}
+
 {%- set cmd = container.get("cmd") or "" %}
+
+{#- Hacking the input parameters in the wrong place #}
+{%- set rust_version = pillar["rust_version"] or "" %}
+{%- set parity_version = pillar["parity_version"] or "" %}
 
 {%- if runoptions == "None" %}
 {%- set runoptions = [] %}
@@ -19,7 +24,7 @@ After=docker.service
 
 [Service]
 Restart=always
-ExecStart=/usr/bin/docker run {% for option in runoptions %}{{ option }} {% endfor %} --name={{ name }} {{ container.image }} {{ cmd }}
+ExecStart=/usr/bin/docker run {% for option in runoptions %}{{ option }} {% endfor %} --name={{ name }} {{ container.image }} {{ cmd }} {{ rust_version }}  {{ parity_version }}
 ExecStop=/usr/bin/docker stop {{ name }}
 ExecStopPost=/usr/bin/docker rm -f {{ name }}
 
