--- a/docker/files/systemd.conf
+++ b/docker/files/systemd.conf
@@ -26,7 +26,7 @@ After=docker.service
 Restart=always
 ExecStart=/usr/bin/docker run {% for option in runoptions %}{{ option }} {% endfor %} --name={{ name }} {{ container.image }} {{ cmd }} {{ rust_version }}  {{ parity_version }}
 ExecStop=/usr/bin/docker stop {{ name }}
-ExecStopPost=/usr/bin/docker rm -f {{ name }}
+#ExecStopPost=/usr/bin/docker rm -f {{ name }}
 
 [Install]
 WantedBy=multi-user.target
